# pokemon-deltalake

./: .pre-commit-config.yaml  README.md  boilerplate.env  pokemons  pyproject.toml
.devcontainer/: .p10k.zsh  Dockerfile  boilerplate.env  devcontainer.json  docker-compose.yml  dockerfile  minio.env  post_attach_command.sh  post_create_command.sh  zsh.sh
src/pipeline/: bronze_pokemon.py  gold_pokemon.py  raw_pokemon.py  raw_pokemons.py  silver_pokemon.py
src/pokemon-datalake/: README.md  boilerplate.env  pyproject.toml  setup.cfg  setup.py
src/pokemon-datalake/pokemon_datalake/: definitions.py
src/pokemon-datalake/pokemon_datalake/assets/: bronze_pokemon.py  gold_pokemon.py  raw_pokemon.py  silver_pokemon.py
src/pokemon-datalake/pokemon_datalake/resources/: s3_manager.py
src/pokemon-datalake/pokemon_datalake/schemas/: pokemon_details.py
src/resources/: duckdb_manager.py  s3_manager.py
src/schemas/: pokemon_details.py  pokemon_species.py  pokemons_list.py
src/sql/: duckdb_playground.sql
